data/intermediate/generated/parser/B/bParser.py
# Generated from /Users/annaellebaiget/Desktop/MS_Thesis/ExplainFuzz/data/intermediate/grammars/final/B/bParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class bParser ( Parser ):

    grammarFileName = "bParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "';'", "'('", "')'", "':'", "'{'", 
                     "'}'", "'return'", "'goto'", "'switch'", "'while'", 
                     "'if'", "'else'", "'case'", "'extrn'", "'auto'", "'?'", 
                     "'&'", "'='", "'++'", "'--'", "'-'", "'!'", "'|'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'<<'", 
                     "'>>'", "'+'", "'%'", "'*'", "'/'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "TERM_0", "TERM_1", "TERM_2", "TERM_3", 
                      "TERM_4", "TERM_5", "TERM_6", "TERM_7", "TERM_8", 
                      "TERM_9", "TERM_10", "TERM_11", "TERM_12", "TERM_13", 
                      "TERM_14", "TERM_15", "TERM_16", "TERM_17", "TERM_18", 
                      "TERM_19", "TERM_20", "TERM_21", "TERM_22", "TERM_23", 
                      "TERM_24", "TERM_25", "TERM_26", "TERM_27", "TERM_28", 
                      "TERM_29", "TERM_30", "TERM_31", "TERM_32", "TERM_33", 
                      "TERM_34", "TERM_35", "TERM_36", "TERM_37", "NAME", 
                      "INT", "STRING1", "STRING2", "BLOCKCOMMENT", "WS" ]

    RULE_program = 0
    RULE_definition_star = 1
    RULE_block_9 = 2
    RULE_block_0 = 3
    RULE_block_9_star = 4
    RULE_block_10 = 5
    RULE_block_2 = 6
    RULE_block_10_star = 7
    RULE_definition = 8
    RULE_block_2_question = 9
    RULE_block_0_star = 10
    RULE_constant_question = 11
    RULE_statement = 12
    RULE_nullstmt = 13
    RULE_expressionstmt = 14
    RULE_blockstmt = 15
    RULE_statement_star = 16
    RULE_block_4 = 17
    RULE_returnstmt = 18
    RULE_block_4_question = 19
    RULE_gotostmt = 20
    RULE_switchstmt = 21
    RULE_whilestmt = 22
    RULE_block_5 = 23
    RULE_ifstmt = 24
    RULE_block_5_question = 25
    RULE_casestmt = 26
    RULE_block_6 = 27
    RULE_externsmt = 28
    RULE_block_6_star = 29
    RULE_block_7 = 30
    RULE_autosmt = 31
    RULE_block_7_star = 32
    RULE_ternary = 33
    RULE_comparison = 34
    RULE_assignment = 35
    RULE_expression = 36
    RULE_functioninvocation = 37
    RULE_functionparameters_question = 38
    RULE_block_8 = 39
    RULE_functionparameters = 40
    RULE_block_8_star = 41
    RULE_assign = 42
    RULE_binary_question = 43
    RULE_incdec = 44
    RULE_unary = 45
    RULE_binary = 46
    RULE_lvalue = 47
    RULE_constant = 48
    RULE_name = 49
    RULE_ival = 50
    RULE_rvalue = 51

    ruleNames =  [ "program", "definition_star", "block_9", "block_0", "block_9_star", 
                   "block_10", "block_2", "block_10_star", "definition", 
                   "block_2_question", "block_0_star", "constant_question", 
                   "statement", "nullstmt", "expressionstmt", "blockstmt", 
                   "statement_star", "block_4", "returnstmt", "block_4_question", 
                   "gotostmt", "switchstmt", "whilestmt", "block_5", "ifstmt", 
                   "block_5_question", "casestmt", "block_6", "externsmt", 
                   "block_6_star", "block_7", "autosmt", "block_7_star", 
                   "ternary", "comparison", "assignment", "expression", 
                   "functioninvocation", "functionparameters_question", 
                   "block_8", "functionparameters", "block_8_star", "assign", 
                   "binary_question", "incdec", "unary", "binary", "lvalue", 
                   "constant", "name", "ival", "rvalue" ]

    EOF = Token.EOF
    TERM_0=1
    TERM_1=2
    TERM_2=3
    TERM_3=4
    TERM_4=5
    TERM_5=6
    TERM_6=7
    TERM_7=8
    TERM_8=9
    TERM_9=10
    TERM_10=11
    TERM_11=12
    TERM_12=13
    TERM_13=14
    TERM_14=15
    TERM_15=16
    TERM_16=17
    TERM_17=18
    TERM_18=19
    TERM_19=20
    TERM_20=21
    TERM_21=22
    TERM_22=23
    TERM_23=24
    TERM_24=25
    TERM_25=26
    TERM_26=27
    TERM_27=28
    TERM_28=29
    TERM_29=30
    TERM_30=31
    TERM_31=32
    TERM_32=33
    TERM_33=34
    TERM_34=35
    TERM_35=36
    TERM_36=37
    TERM_37=38
    NAME=39
    INT=40
    STRING1=41
    STRING2=42
    BLOCKCOMMENT=43
    WS=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition_star(self):
            return self.getTypedRuleContext(bParser.Definition_starContext,0)


        def EOF(self):
            return self.getToken(bParser.EOF, 0)

        def getRuleIndex(self):
            return bParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = bParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [39]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.definition_star()
                self.state = 105
                self.match(bParser.EOF)
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(bParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Definition_starContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self):
            return self.getTypedRuleContext(bParser.DefinitionContext,0)


        def definition_star(self):
            return self.getTypedRuleContext(bParser.Definition_starContext,0)


        def name(self):
            return self.getTypedRuleContext(bParser.NameContext,0)


        def constant_question(self):
            return self.getTypedRuleContext(bParser.Constant_questionContext,0)


        def block_0_star(self):
            return self.getTypedRuleContext(bParser.Block_0_starContext,0)


        def TERM_1(self):
            return self.getToken(bParser.TERM_1, 0)

        def TERM_2(self):
            return self.getToken(bParser.TERM_2, 0)

        def block_2_question(self):
            return self.getTypedRuleContext(bParser.Block_2_questionContext,0)


        def TERM_3(self):
            return self.getToken(bParser.TERM_3, 0)

        def statement(self):
            return self.getTypedRuleContext(bParser.StatementContext,0)


        def getRuleIndex(self):
            return bParser.RULE_definition_star

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition_star" ):
                listener.enterDefinition_star(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition_star" ):
                listener.exitDefinition_star(self)




    def definition_star(self):

        localctx = bParser.Definition_starContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition_star)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.definition()
                self.state = 111
                self.definition_star()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.name()
                self.state = 114
                self.constant_question()
                self.state = 115
                self.block_0_star()
                self.state = 116
                self.match(bParser.TERM_1)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 118
                self.name()
                self.state = 119
                self.match(bParser.TERM_2)
                self.state = 120
                self.block_2_question()
                self.state = 121
                self.match(bParser.TERM_3)
                self.state = 122
                self.statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 124
                self.name()
                self.state = 125
                self.constant_question()
                self.state = 126
                self.match(bParser.TERM_1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_9Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERM_0(self):
            return self.getToken(bParser.TERM_0, 0)

        def ival(self):
            return self.getTypedRuleContext(bParser.IvalContext,0)


        def getRuleIndex(self):
            return bParser.RULE_block_9

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_9" ):
                listener.enterBlock_9(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_9" ):
                listener.exitBlock_9(self)




    def block_9(self):

        localctx = bParser.Block_9Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block_9)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(bParser.TERM_0)
            self.state = 131
            self.ival()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ival(self):
            return self.getTypedRuleContext(bParser.IvalContext,0)


        def block_9_star(self):
            return self.getTypedRuleContext(bParser.Block_9_starContext,0)


        def INT(self):
            return self.getToken(bParser.INT, 0)

        def STRING1(self):
            return self.getToken(bParser.STRING1, 0)

        def STRING2(self):
            return self.getToken(bParser.STRING2, 0)

        def NAME(self):
            return self.getToken(bParser.NAME, 0)

        def getRuleIndex(self):
            return bParser.RULE_block_0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_0" ):
                listener.enterBlock_0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_0" ):
                listener.exitBlock_0(self)




    def block_0(self):

        localctx = bParser.Block_0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block_0)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.ival()
                self.state = 134
                self.block_9_star()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(bParser.INT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.match(bParser.STRING1)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 138
                self.match(bParser.STRING2)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                self.match(bParser.NAME)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_9_starContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_9(self):
            return self.getTypedRuleContext(bParser.Block_9Context,0)


        def block_9_star(self):
            return self.getTypedRuleContext(bParser.Block_9_starContext,0)


        def TERM_0(self):
            return self.getToken(bParser.TERM_0, 0)

        def ival(self):
            return self.getTypedRuleContext(bParser.IvalContext,0)


        def getRuleIndex(self):
            return bParser.RULE_block_9_star

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_9_star" ):
                listener.enterBlock_9_star(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_9_star" ):
                listener.exitBlock_9_star(self)




    def block_9_star(self):

        localctx = bParser.Block_9_starContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block_9_star)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.block_9()
                self.state = 143
                self.block_9_star()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(bParser.TERM_0)
                self.state = 146
                self.ival()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_10Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERM_0(self):
            return self.getToken(bParser.TERM_0, 0)

        def name(self):
            return self.getTypedRuleContext(bParser.NameContext,0)


        def getRuleIndex(self):
            return bParser.RULE_block_10

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_10" ):
                listener.enterBlock_10(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_10" ):
                listener.exitBlock_10(self)




    def block_10(self):

        localctx = bParser.Block_10Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block_10)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(bParser.TERM_0)
            self.state = 150
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(bParser.NameContext,0)


        def block_10_star(self):
            return self.getTypedRuleContext(bParser.Block_10_starContext,0)


        def NAME(self):
            return self.getToken(bParser.NAME, 0)

        def getRuleIndex(self):
            return bParser.RULE_block_2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_2" ):
                listener.enterBlock_2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_2" ):
                listener.exitBlock_2(self)




    def block_2(self):

        localctx = bParser.Block_2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block_2)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.name()
                self.state = 153
                self.block_10_star()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.match(bParser.NAME)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_10_starContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_10(self):
            return self.getTypedRuleContext(bParser.Block_10Context,0)


        def block_10_star(self):
            return self.getTypedRuleContext(bParser.Block_10_starContext,0)


        def TERM_0(self):
            return self.getToken(bParser.TERM_0, 0)

        def name(self):
            return self.getTypedRuleContext(bParser.NameContext,0)


        def getRuleIndex(self):
            return bParser.RULE_block_10_star

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_10_star" ):
                listener.enterBlock_10_star(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_10_star" ):
                listener.exitBlock_10_star(self)




    def block_10_star(self):

        localctx = bParser.Block_10_starContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block_10_star)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.block_10()
                self.state = 159
                self.block_10_star()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.match(bParser.TERM_0)
                self.state = 162
                self.name()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(bParser.NameContext,0)


        def constant_question(self):
            return self.getTypedRuleContext(bParser.Constant_questionContext,0)


        def block_0_star(self):
            return self.getTypedRuleContext(bParser.Block_0_starContext,0)


        def TERM_1(self):
            return self.getToken(bParser.TERM_1, 0)

        def TERM_2(self):
            return self.getToken(bParser.TERM_2, 0)

        def block_2_question(self):
            return self.getTypedRuleContext(bParser.Block_2_questionContext,0)


        def TERM_3(self):
            return self.getToken(bParser.TERM_3, 0)

        def statement(self):
            return self.getTypedRuleContext(bParser.StatementContext,0)


        def getRuleIndex(self):
            return bParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)




    def definition(self):

        localctx = bParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_definition)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.name()
                self.state = 166
                self.constant_question()
                self.state = 167
                self.block_0_star()
                self.state = 168
                self.match(bParser.TERM_1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.name()
                self.state = 171
                self.match(bParser.TERM_2)
                self.state = 172
                self.block_2_question()
                self.state = 173
                self.match(bParser.TERM_3)
                self.state = 174
                self.statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 176
                self.name()
                self.state = 177
                self.constant_question()
                self.state = 178
                self.match(bParser.TERM_1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_2_questionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(bParser.NameContext,0)


        def block_10_star(self):
            return self.getTypedRuleContext(bParser.Block_10_starContext,0)


        def NAME(self):
            return self.getToken(bParser.NAME, 0)

        def getRuleIndex(self):
            return bParser.RULE_block_2_question

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_2_question" ):
                listener.enterBlock_2_question(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_2_question" ):
                listener.exitBlock_2_question(self)




    def block_2_question(self):

        localctx = bParser.Block_2_questionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block_2_question)
        try:
            self.state = 187
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self.name()
                self.state = 184
                self.block_10_star()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 186
                self.match(bParser.NAME)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_0_starContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_0(self):
            return self.getTypedRuleContext(bParser.Block_0Context,0)


        def block_0_star(self):
            return self.getTypedRuleContext(bParser.Block_0_starContext,0)


        def ival(self):
            return self.getTypedRuleContext(bParser.IvalContext,0)


        def block_9_star(self):
            return self.getTypedRuleContext(bParser.Block_9_starContext,0)


        def INT(self):
            return self.getToken(bParser.INT, 0)

        def STRING1(self):
            return self.getToken(bParser.STRING1, 0)

        def STRING2(self):
            return self.getToken(bParser.STRING2, 0)

        def NAME(self):
            return self.getToken(bParser.NAME, 0)

        def getRuleIndex(self):
            return bParser.RULE_block_0_star

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_0_star" ):
                listener.enterBlock_0_star(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_0_star" ):
                listener.exitBlock_0_star(self)




    def block_0_star(self):

        localctx = bParser.Block_0_starContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block_0_star)
        try:
            self.state = 199
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 189
                self.block_0()
                self.state = 190
                self.block_0_star()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self.ival()
                self.state = 193
                self.block_9_star()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 195
                self.match(bParser.INT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 196
                self.match(bParser.STRING1)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 197
                self.match(bParser.STRING2)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 198
                self.match(bParser.NAME)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constant_questionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(bParser.INT, 0)

        def STRING1(self):
            return self.getToken(bParser.STRING1, 0)

        def STRING2(self):
            return self.getToken(bParser.STRING2, 0)

        def getRuleIndex(self):
            return bParser.RULE_constant_question

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant_question" ):
                listener.enterConstant_question(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant_question" ):
                listener.exitConstant_question(self)




    def constant_question(self):

        localctx = bParser.Constant_questionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_constant_question)
        try:
            self.state = 205
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 202
                self.match(bParser.INT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 203
                self.match(bParser.STRING1)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 204
                self.match(bParser.STRING2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(bParser.NameContext,0)


        def TERM_4(self):
            return self.getToken(bParser.TERM_4, 0)

        def statement(self):
            return self.getTypedRuleContext(bParser.StatementContext,0)


        def TERM_14(self):
            return self.getToken(bParser.TERM_14, 0)

        def block_6_star(self):
            return self.getTypedRuleContext(bParser.Block_6_starContext,0)


        def TERM_1(self):
            return self.getToken(bParser.TERM_1, 0)

        def TERM_15(self):
            return self.getToken(bParser.TERM_15, 0)

        def constant_question(self):
            return self.getTypedRuleContext(bParser.Constant_questionContext,0)


        def block_7_star(self):
            return self.getTypedRuleContext(bParser.Block_7_starContext,0)

